# Robotics_and_ROS2

./: .gitignore  README.md  frames.gv
src/arduinobot_controller/: CMakeLists.txt  arduinobot_controller.xml  package.xml
src/arduinobot_controller/config/: arduinobot_controllers.yaml
src/arduinobot_controller/include/arduinobot_controller/: arduinobot_interface.hpp
src/arduinobot_controller/launch/: controller.launch.py
src/arduinobot_controller/src/: arduinobot_interface.cpp
src/arduinobot_cpp_examples/: CMakeLists.txt  README.md  package.xml
src/arduinobot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node.cpp  simple_moveit_interface.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp
src/arduinobot_description/: CMakeLists.txt  package.xml
src/arduinobot_description/launch/: display.launch.py  gazebo.launch.py
src/arduinobot_description/rviz/: display.rviz
src/arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_gazebo.xacro  arduinobot_ros2_control.xacro
src/arduinobot_firmware/: CMakeLists.txt  package.xml
src/arduinobot_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
src/arduinobot_firmware/src/: simple_serial_receiver.cpp  simple_serial_transmitter.cpp
src/arduinobot_moveit/: CMakeLists.txt  package.xml
src/arduinobot_moveit/config/: arduinobot.srdf  cartesian_limits.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml
src/arduinobot_moveit/launch/: moveit.launch.py
src/arduinobot_msgs/: CMakeLists.txt  README.md  package.xml
src/arduinobot_msgs/srv/: AddTwoInts.srv  EulerToQuaternion.srv  QuaternionToEuler.srv
src/arduinobot_py_examples/: package.xml  setup.py
src/arduinobot_py_examples/arduinobot_py_examples/: simple_action_client.py  simple_action_server.py  simple_parameter.py  simple_publisher.py  simple_service_client.py  simple_service_server.py  simple_subscriber.py
src/arduinobot_remote/: CMakeLists.txt  package.xml
src/arduinobot_remote/src/: task_server.cpp
src/arduinobot_utils/: CMakeLists.txt  package.xml
src/arduinobot_utils/arduinobot_utils/: angle_conversion.py
src/arduinobot_utils/src/: angle_conversion.cpp
